// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountIdentities renders empty 1`] = `
<SideEffect(DocumentTitle)
  title="Identities - Sentry"
>
  <div>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      title="Identities"
    />
    <Panel>
      <PanelHeader
        disablePadding={true}
      >
        <Styled(div)
          px={2}
        >
          Identities
        </Styled(div)>
      </PanelHeader>
      <PanelBody
        direction="column"
        disablePadding={true}
        flex={false}
      >
        <EmptyMessage>
          There are no identities associated with this account
        </EmptyMessage>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;

exports[`AccountIdentities renders list 1`] = `
<SideEffect(DocumentTitle)
  title="Identities - Sentry"
>
  <div>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      title="Identities"
    />
    <Panel>
      <PanelHeader
        disablePadding={true}
      >
        <Styled(div)
          px={2}
        >
          Identities
        </Styled(div)>
      </PanelHeader>
      <PanelBody
        direction="column"
        disablePadding={true}
        flex={false}
      >
        <PanelItem
          alignItems="center"
          key="1"
          p={0}
        >
          <Styled(div)
            flex="1"
            p={2}
          >
            GitHub
          </Styled(div)>
          <Styled(div)
            p={2}
          >
            <Button
              align="center"
              disabled={false}
              onClick={[Function]}
              size="small"
            >
              Disconnect
            </Button>
          </Styled(div)>
        </PanelItem>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;
